--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -160,6 +160,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:padding="16dp"
+                android:onClick="toHighScore"
                 android:orientation="vertical">
 
                 <ImageView
@@ -176,6 +177,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
                     android:textStyle="bold"
+
                     android:gravity="center"/>
             </LinearLayout>
         </android.support.v7.widget.CardView>
