--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -3,6 +3,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:background="@drawable/background1"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -10,75 +11,93 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:textSize="30sp"
-        android:text="Record"/>
+        android:text="Record"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
     <Button
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="Start"
-        android:id="@+id/btnStartRecord"/>
+        android:id="@+id/btnStartRecord"
+        android:layout_width="87dp"
+        android:layout_height="40dp"
+        android:background="@drawable/buttonshape"
+        android:text="Start" />
 
     <Button
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="Stop Record"
-        android:id="@+id/btnStopRecord"/>
+        android:id="@+id/btnStopRecord"
+        android:layout_width="116dp"
+        android:layout_height="44dp"
+        android:background="@drawable/buttonshape"
+        android:text="Stop Record" />
 
     <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:textSize="30sp"
-        android:text="Play"/>
-
-    <Button
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
         android:text="Play"
-        android:id="@+id/bynPlay"/>
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="30sp" />
 
     <Button
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="Stop"
-        android:id="@+id/btnStop"/>
+        android:id="@+id/bynPlay"
+        android:layout_width="98dp"
+        android:layout_height="48dp"
+        android:background="@drawable/buttonshape"
+        android:text="Play" />
+
+    <Button
+        android:id="@+id/btnStop"
+        android:layout_width="98dp"
+        android:layout_height="45dp"
+        android:background="@drawable/buttonshape"
+        android:text="Stop" />
 
     <EditText
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
         android:id="@+id/edit_text"
-        android:hint="Enter Text"
-        android:layout_marginBottom="16dp"/>
-
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="65dp"
-        android:textSize="16sp"
-        android:text="Pitch"/>
-
-    <SeekBar
-        android:layout_height="wrap_content"
-        android:layout_width="200dp"
-        android:id="@+id/seek_bar_pitch"
-        android:progress="50"/>
-
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="60dp"
-        android:textSize="16sp"
-        android:text="Speed"/>
-
-    <SeekBar
-        android:layout_height="wrap_content"
-        android:layout_width="200dp"
-        android:id="@+id/seek_bar_speed"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
         android:layout_marginBottom="16dp"
-        android:progress="50"/>
+        android:background="@drawable/bg_search"
+        android:drawablePadding="15dp"
+        android:hint="Enter Text"
+        android:textAlignment="center" />
+
+    <TextView
+        android:layout_width="113dp"
+        android:layout_height="40dp"
+        android:text="Pitch"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="16sp" />
+
+    <SeekBar
+        android:id="@+id/seek_bar_pitch"
+        android:layout_width="226dp"
+        android:layout_height="34dp"
+        android:progress="50"
+        android:progressDrawable="@drawable/red_scrubber_progress"
+        android:thumb="@drawable/red_scrubber_control" />
+
+    <TextView
+        android:layout_width="113dp"
+        android:layout_height="38dp"
+        android:text="Speed"
+        android:textAlignment="center"
+        android:textSize="16sp" />
+
+    <SeekBar
+        android:id="@+id/seek_bar_speed"
+        android:layout_width="232dp"
+        android:layout_height="28dp"
+        android:layout_marginBottom="16dp"
+        android:progress="50"
+        android:progressDrawable="@drawable/red_scrubber_progress"
+        android:thumb="@drawable/red_scrubber_control" />
 
     <Button
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="Say it!"
         android:id="@+id/button_speak"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/buttonshape"
         android:enabled="false"
-        android:layout_gravity="center_horizontal"/>
+        android:text="Say it!"
+        android:textColor="@color/Dark"/>
 </LinearLayout>
